omni-lib/test_resources/omni_bad/DuplicateParams.omni
module DuplicateParams()

function(x: Int, x: Int) : () = ()

main() : Int = 0